--- a/service-discovery/src/main/resources/bootstrap.properties
+++ b/service-discovery/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
+spring.cloud.config.uri=http://192.168.99.100:8000
+
 spring.application.name=service-discovery
-#spring.cloud.config.uri=http://localhost:8000
-server.port=8761
+server.port=8070
 
