Added Docker file

--- a/client-gateway/src/main/resources/bootstrap.properties
+++ b/client-gateway/src/main/resources/bootstrap.properties
@@ -1,3 +1,5 @@
-spring.application.name=Client Gateway
+spring.application.name=client-gateway
 
-server.port=8000
+server.port=8003
+
+eureka.client.serviceUrl.defaultZone=http://192.168.99.100:8070/eureka/
