--- a/product-catalogue-service/src/main/resources/bootstrap.properties
+++ b/product-catalogue-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
 spring.application.name=product-catalogue-service
-server.port=${PORT:${SERVER_PORT:0}}
+server.port=8001
+
+eureka.client.serviceUrl.defaultZone=http://192.168.99.100:8070/eureka/
