changed eureka url

--- a/client-gateway/src/main/resources/bootstrap.properties
+++ b/client-gateway/src/main/resources/bootstrap.properties
@@ -2,4 +2,4 @@ spring.application.name=client-gateway
 
 server.port=8003
 
-eureka.client.serviceUrl.defaultZone=http://192.168.99.100:8070/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
