--- a/pricing-service/src/main/resources/bootstrap.properties
+++ b/pricing-service/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name=pricing-service
 server.port=8002
 
-eureka.client.serviceUrl.defaultZone=http://192.168.99.100:8070/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka/
