Added zuul routes for pricing and product catalogue services

--- a/client-gateway/src/main/resources/bootstrap.yml
+++ b/client-gateway/src/main/resources/bootstrap.yml
@@ -2,3 +2,12 @@ spring:
   cloud:
     config:
       uri: http://localhost:8000
+
+zuul:
+  routes:
+    pricing-service:
+      path: /**
+      serviceId: pricing-service
+    product-catalogue-service:
+      path: /**
+      serviceId: product-catalogue-service
