Modified zuul prefix and routes for services

--- a/client-gateway/src/main/resources/bootstrap.yml
+++ b/client-gateway/src/main/resources/bootstrap.yml
@@ -4,10 +4,11 @@ spring:
       uri: http://localhost:8000
 
 zuul:
+  prefix: /api
   routes:
     pricing-service:
-      path: /**
+      path: /pricing-service/**
       serviceId: pricing-service
     product-catalogue-service:
       path: /**
-      serviceId: product-catalogue-service
+      serviceId: /product-catalogue-service/**
